--- a/src/404.html
+++ b/src/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>SE Fit Calculator</title>
-    <base href="./">
+    <base href="/se-role-fit/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
@@ -11,4 +11,4 @@
   <body>
     <app-root></app-root>
   </body>
-</html>
+</html> 
